--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "normalize.css": "5.0.0",
     "rmdir": "1.2.0",
     "unexpected-markdown": "1.7.1"
+  },
+  "devDependencies": {
+    "run-when-changed": "1.3.0"
   }
 }
