--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   },
   "devDependencies": {
     "run-when-changed": "1.3.0"
+  },
+  "bin": {
+      "unexpected-presentation": "./bin/build.js"
   }
 }
