--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   ],
   "author": "Sune Simonsen",
   "license": "MIT",
+  "bugs": "https://github.com/unexpectedjs/unexpected/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/unexpectedjs/unexpected-presentation"
+  },
   "dependencies": {
     "async": "2.0.1",
     "ncp": "2.0.0",
@@ -20,6 +25,6 @@
     "run-when-changed": "1.3.0"
   },
   "bin": {
-      "unexpected-presentation": "./bin/build.js"
+    "unexpected-presentation": "./bin/build.js"
   }
 }
