--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "async": "2.0.1",
+    "minimist": "1.2.0",
     "ncp": "2.0.0",
     "normalize.css": "5.0.0",
     "rmdir": "1.2.0",
