--- a/example/package.json
+++ b/example/package.json
@@ -6,5 +6,8 @@
     "sinon": "1.17.6",
     "unexpected-presentation": "..",
     "unexpected-sinon": "10.5.0"
+  },
+  "devDependencies": {
+    "serve": "1.4.0"
   }
 }
