--- a/example/package.json
+++ b/example/package.json
@@ -1,13 +1,12 @@
 {
   "name": "example",
   "version": "1.0.0",
-  "dependencies": {
+  "devDependencies": {
+    "gh-pages": "0.12.0",
     "moment": "2.16.0",
+    "serve": "1.4.0",
     "sinon": "1.17.6",
     "unexpected-presentation": "..",
     "unexpected-sinon": "10.5.0"
-  },
-  "devDependencies": {
-    "serve": "1.4.0"
   }
 }
