--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "unexpected-markdown": "1.7.1"
   },
   "devDependencies": {
-    "run-when-changed": "1.3.0"
+    "run-when-changed": "1.3.0",
+    "vanilla-touchwipe": "1.0.0"
   },
   "bin": {
     "unexpected-presentation": "./bin/build.js"
