--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "ncp": "2.0.0",
     "normalize.css": "5.0.0",
     "rmdir": "1.2.0",
-    "unexpected-markdown": "1.7.1"
+    "unexpected-markdown": "1.7.1",
+    "vanilla-touchwipe": "1.0.0"
   },
   "devDependencies": {
-    "run-when-changed": "1.3.0",
-    "vanilla-touchwipe": "1.0.0"
+    "run-when-changed": "1.3.0"
   },
   "bin": {
     "unexpected-presentation": "./bin/build.js"
